--- a/zuri_django/templates/blog/register.html
+++ b/zuri_django/templates/blog/register.html
@@ -102,6 +102,7 @@
           }, false);
         })();
         </script>
+                <input type="hidden" name="next" value="{{ request.GET.next }}"/>
 
     </body>
 
