--- a/zuri/static/blog/css/style.css
+++ b/zuri/static/blog/css/style.css
@@ -1,6 +1,7 @@
 body{
     background: whitesmoke;
     margin: 0;
+    padding:0
 }
 
 
@@ -9,4 +10,22 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.home_middle{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+@media screen and (max-width:1000px) {
+    .home_middle{
+        display:block;
+        justify-content: none;
+        align-items:none;
+        margin-right:auto;
+        margin-left: auto;
+    }
+    
 }
