--- a/zuri_django/templates/base.html
+++ b/zuri_django/templates/base.html
@@ -7,19 +7,19 @@
     <head>
         <meta charset="utf-8">
         <title>{% block title %}{% endblock %}</title>
-        <link rel="stylesheet" href="{% static '/blog/css/bootstrap.min.css' %}">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
         <link rel="stylesheet" href="{% static '/blog/css/style.css' %}">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
 
-    <script src="{% static '/blog/js/jquery.js' %}"></script>
-    <script src="{% static '/blog/js/bootstrap.min.js' %}"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="https://concealme.herokuapp.com/static/bootstrap-4.4.1-dist/bootstrap-4.4.1-dist/js/bootstrap.bundle.min.js"></script>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light mb-3">
+    <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light mb-3">
         <div class="container">
-            <a class="navbar-brand pr-2 pl-2" href="/" id="blog">Blog  </a>
+            <a class="navbar-brand pr-2 pl-2" href="{% url 'home' %}" id="blog">Blog  </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -49,7 +49,7 @@
         </div>
     </nav>
 
-    <div class="container">
+    <div class="container" style="margin-top:80px">
        {% block page_content %}{% endblock %}
     </div>
 
