--- a/zuri_django/templates/blog/home.html
+++ b/zuri_django/templates/blog/home.html
@@ -8,14 +8,14 @@
 {% block page_content %}
 
     <h1 class="mx-auto">Welcome to Blog</h1>
-    <div class="middle">
+    <div class="card-group mx-auto">
         {% for category in category %}
-            <div class="card float-left mr-2 " style="width:20%; height:250px">
+            <div class="card  mr-2 " style="min-height:250px">
                 <div class="card-body">
                     <h4 class="card-title"> <a href="{% url 'category' category.slug  %}">{{category}}</a><br/></h4>
                     <p class="card-text"> <small>{{category.about}}</small> </p>
                 </div>
-                <img class="card-img-bottom" src="https://s3.eu-central-1.amazonaws.com/bootstrapbaymisc/blog/24_days_bootstrap/bologna-2.jpg" alt="Bologna">
+                <img class="card-img-bottom" src="https://s3.eu-central-1.amazonaws.com/bootstrapbaymisc/blog/24_days_bootstrap/bologna-2.jpg" style="overflow:hide" alt="Bologna">
             </div>
         {% empty %}
             There are no stories yet
