Added bootstrap cdn for the styling

--- a/zuri_django/templates/registration/password_reset.html
+++ b/zuri_django/templates/registration/password_reset.html
@@ -5,63 +5,60 @@
 
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="{% static '/bootstrap-4.4.1-dist/bootstrap-4.4.1-dist/css/bootstrap.min.css' %}">
-        <link href="{%  static 'images/download.png' %}" rel="icon">
-        <link href="{% static 'images/download.png' %}" rel="apple-touch-icon">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>{% block title %}{% endblock %}</title>
         <title>Password Reset</title>
     </head>
+
     <body class="container" style="background-image: url('/static/images/background.png');
                             background-position: center center;
                             background-repeat: no-repeat;
                             background-attachment: fixed;
                             background-size: cover;
                             background-color: #fffdd0;"> 
-      <div class="row" style="padding-top:100px">
-        <div class="col-md-5 mx-auto">
-          <div class="card" >
-            <div class="card-body">
-              <form method="post" class="text-center needs-validation border border-light p-" novalidate>
-                <a href="{% url 'anon:home' %}" class="logo mr-auto"><img  style="width:70px; height:70px" src="{% static 'images/download.png' %}" alt="" class="img-fluid"></a>
-                <br/> <br/>
-                <p class="h4 mb-4"><b>Reset Password </b></p>
-                <b >Enter your email address and we will send you a link to reset your password.</b>
-                {% csrf_token %}
-                <input type="email" name="email" autocomplete="email" maxlength="254" required="" class="form-control" id="id_email">
-                <div  class="invalid-feedback">
-                  Please input a valid email.
+        <div class="row" style="padding-top:100px">
+            <div class="col-md-5 mx-auto">
+                <div class="card" >
+                    <div class="card-body">
+                        <form method="post" class="text-center needs-validation border border-light pb-2" novalidate>
+
+                            <p class="h4 mb-4"><b>Reset Password </b></p>
+                            <b >Enter your email address and we will send you a link to reset your password.</b>
+                            {% csrf_token %}
+                            <input type="email" name="email" autocomplete="email" maxlength="254" required="" class="form-control" id="id_email">
+                            <div  class="invalid-feedback">
+                              Please input a valid email.
+                            </div>
+                            {% if form.email.errors %}
+                                {% for error in form.email.errors %}
+                                    <p  class="alert alert-danger mt-3">{{ error }}</p>
+                                {% endfor %}
+                            {% endif %}
+                            <button class="btn btn-info btn-block my-4" type="submit">Send Password Reset Email</button>
+                        </form>
+                    </div>
                 </div>
-                {% if form.email.errors %}                            
-                    {% for error in form.email.errors %}
-                        <p  class="alert alert-danger mt-3">{{ error }}</p>
-                    {% endfor %}                            
-                {% endif %}
-                <button class="btn btn-info btn-block my-4" type="submit">Send Password Reset Email</button>
-              </form>
             </div>
-          </div>
         </div>
-      </div>
-      <script type="text/javascript">
-        // Example starter JavaScript for disabling form submissions if there are invalid fields
-        (function() {
-          'use strict';
-          window.addEventListener('load', function() {
-            // Fetch all the forms we want to apply custom Bootstrap validation styles to
-            var forms = document.getElementsByClassName('needs-validation');
-            // Loop over them and prevent submission
-            var validation = Array.prototype.filter.call(forms, function(form) {
-              form.addEventListener('submit', function(event) {
-                if (form.checkValidity() === false) {
-                  event.preventDefault();
-                  event.stopPropagation();
-                }
-                form.classList.add('was-validated');
+        <script type="text/javascript">
+            // Example starter JavaScript for disabling form submissions if there are invalid fields
+            (function() {
+              'use strict';
+              window.addEventListener('load', function() {
+                // Fetch all the forms we want to apply custom Bootstrap validation styles to
+                var forms = document.getElementsByClassName('needs-validation');
+                // Loop over them and prevent submission
+                var validation = Array.prototype.filter.call(forms, function(form) {
+                  form.addEventListener('submit', function(event) {
+                    if (form.checkValidity() === false) {
+                      event.preventDefault();
+                      event.stopPropagation();
+                    }
+                    form.classList.add('was-validated');
+                  }, false);
+                });
               }, false);
-            });
-          }, false);
-        })();
+            })();
         </script>
     </body>
 </html>
