--- a/zuri_django/templates/registration/password_reset_complete.html
+++ b/zuri_django/templates/registration/password_reset_complete.html
@@ -1,14 +1,15 @@
-<html lang="en">
+<!DOCTYPE html>
+
 {% load static %}
+
+<html lang="en">
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="{% static '/bootstrap-4.4.1-dist/bootstrap-4.4.1-dist/css/bootstrap.min.css' %}">
-        <link href="{%  static 'images/download.png' %}" rel="icon">
-        <link href="{% static 'images/download.png' %}" rel="apple-touch-icon">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Password Changed</title>
     </head>
-     <body class="container" style="background-image: url('/static/images/background.png');
+    <body class="container" style="background-image: url('/static/images/background.png');
                             background-position: center center;
                             background-repeat: no-repeat;
                             background-attachment: fixed;
@@ -22,12 +23,12 @@
         <div class="card">
   <div class="card-body">
           <div class="alert alert-success text-center border border-light " role="alert">
-      <a href="{% url 'anon:home' %}" class="logo mr-auto "><img  style="width:70px; height:70px" src="{% static 'images/download.png' %}" alt="" class="img-fluid"></a>
-             <br/> <br/>
+      <a href="{% url 'home' %}" class="logo mr-auto mb-2">Home</a>
+
                 <h3 class="card-title">Password changed!</h3>
             <b> You have successfully changed your password! You may now proceed to log in. </b>
           </div>
-          <a href="{% url 'anon:sign_in' %}" class="btn btn-info btn-block">Return to log in</a>
+          <a href="{% url 'sign_in' %}" class="btn btn-info btn-block">Return to log in</a>
         </div>
       </div>
     </div>
