--- a/zuri_django/templates/registration/password_reset_confirm.html
+++ b/zuri_django/templates/registration/password_reset_confirm.html
@@ -1,10 +1,10 @@
-<html lang="en">
+<!DOCTYPE html>
 {% load static %}
+
+<html lang="en">
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="{% static '/bootstrap-4.4.1-dist/bootstrap-4.4.1-dist/css/bootstrap.min.css' %}">
-        <link href="{%  static 'images/download.png' %}" rel="icon">
-        <link href="{% static 'images/download.png' %}" rel="apple-touch-icon">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>
             {% if validlink %}
@@ -27,15 +27,14 @@
                 <div class="card">
                     <div class="card-body">
                         <form class="text-center needs-validation border border-light" method="post" novalidate>
-                            <a href="{% url 'anon:home' %}" class="logo mr-auto"><img  style="width:70px; height:70px" src="{% static 'images/download.png' %}" alt="" class="img-fluid"></a>
-                            <br/> <br/>
-                            <h3 class="card-title">Change password for 👑{{ form.user.username }}</h3>
+                            <a href="{% url 'home' %}" class="logo mr-auto pb-2">Home</a>
+
+                            <h3 class="card-title">Change password for {{ form.user.username }}</h3>
                             {% csrf_token %}
                             <input type="password" name="new_password1" class="form-control" placeholder="New Password" autocomplete="new-password" required="" id="id_new_password1" aria-autocomplete="list">
                             <div  class="invalid-feedback">
                                 Please choose a password.
                             </div>
-                            {{form.new_password1.help_text}}
                             {% if form.new_password1.errors %}
                                 {% for error in form.new_password1.errors %}
                                     <p  class="alert alert-danger mb-2">{{ error }}</p>
