--- a/zuri_django/templates/registration/password_reset_done.html
+++ b/zuri_django/templates/registration/password_reset_done.html
@@ -2,9 +2,7 @@
 {% load static %}
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="{% static '/bootstrap-4.4.1-dist/bootstrap-4.4.1-dist/css/bootstrap.min.css' %}">
-        <link href="{%  static 'images/download.png' %}" rel="icon">
-        <link href="{% static 'images/download.png' %}" rel="apple-touch-icon">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Reset Done</title>
     </head>
@@ -19,12 +17,12 @@
           <div class="card">
             <div class="card-body">
               <div class="alert alert-success text-center border border-light p-5" role="alert">
-                <a href="{% url 'anon:home' %}" class="logo mr-auto"><img  style="width:70px; height:70px" src="{% static 'images/download.png' %}" alt="" class="img-fluid"></a>
+                <a href="{% url 'home' %}" class="logo mr-auto">Home</a>
                 <br><br>
                 <h3 class="card-title">Email Sent!</h3>
                 <b>Check your email for a link to reset your password. If it doesn't appear within a few minutes, check your spam folder.. </b>
               </div>
-              <a href="{% url 'anon:sign_in' %}" class="btn btn-info btn-block">Return to log in</a>
+              <a href="{% url 'sign_in' %}" class="btn btn-info btn-block">Return to log in</a>
             </div>
           </div>
         </div>
