added password reset paths to the url list

--- a/zuri_django/templates/registration/password_reset_confirm.html
+++ b/zuri_django/templates/registration/password_reset_confirm.html
@@ -31,7 +31,7 @@
 
                             <h3 class="card-title">Change password for {{ form.user.username }}</h3>
                             {% csrf_token %}
-                            <input type="password" name="new_password1" class="form-control" placeholder="New Password" autocomplete="new-password" required="" id="id_new_password1" aria-autocomplete="list">
+                            <input type="password" name="new_password1" class="form-control mb-2" placeholder="New Password" autocomplete="new-password" required="" id="id_new_password1" aria-autocomplete="list">
                             <div  class="invalid-feedback">
                                 Please choose a password.
                             </div>
